; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_lp.c_bwn_phy_lp_set_txgain_pa.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_lp.c_bwn_phy_lp_set_txgain_pa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwn_mac*, i32)* @bwn_phy_lp_set_txgain_pa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_phy_lp_set_txgain_pa(%struct.bwn_mac* %0, i32 %1) #0 {
  %3 = alloca %struct.bwn_mac*, align 8
  %4 = alloca i32, align 4
  store %struct.bwn_mac* %0, %struct.bwn_mac** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.bwn_mac*, %struct.bwn_mac** %3, align 8
  %6 = call i32 @BWN_PHY_OFDM(i32 251)
  %7 = load i32, i32* %4, align 4
  %8 = shl i32 %7, 6
  %9 = call i32 @BWN_PHY_SETMASK(%struct.bwn_mac* %5, i32 %6, i32 57407, i32 %8)
  %10 = load %struct.bwn_mac*, %struct.bwn_mac** %3, align 8
  %11 = call i32 @BWN_PHY_OFDM(i32 253)
  %12 = load i32, i32* %4, align 4
  %13 = shl i32 %12, 8
  %14 = call i32 @BWN_PHY_SETMASK(%struct.bwn_mac* %10, i32 %11, i32 33023, i32 %13)
  ret void
}

declare dso_local i32 @BWN_PHY_SETMASK(%struct.bwn_mac*, i32, i32, i32) #1

declare dso_local i32 @BWN_PHY_OFDM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
